[package]
name = "octetable-dht"
version = "0.1.0"
authors = ["Romain Leroux <romain@leroux.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.5", features = ["full"] }
tokio-stream = "0.1.5"