[package]
name = "octetable-dht"
version = "0.1.0"
authors = [
  "Romain Leroux <romain@leroux.dev>",
  "Jeremy Brixhe <jeremy@brixhe.dev>"
]
edition = "2018"

[dependencies]
bytes = "1"
fastrand = "1"
futures = "0.3"
hex = "0.4"
rand = "0.8"
sha-1 = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
tokio-stream = "0.1"
