[package]
name = "octetable-dht"
version = "0.1.0"
authors = [
  "Romain Leroux <romain@leroux.dev>",
  "Jeremy Brixhe <jeremy@brixhe.dev>"
]
edition = "2018"

[dependencies]
bincode = "1.3.2"
bytes = "1"
fastrand = "1"
futures = { version = "0.3", features = ["executor"]}
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
sha-1 = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
tokio-stream = "0.1"
